<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <TextView
        android:id="@+id/item_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fill all fields and \n Scroll down to see more fields and posting button"
        android:textColor="#C63030"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="Fragments.SearchFragment"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/item_name2">


        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/what_would_you_like_to_sell" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:hint="@string/name_of_item"/>

            <EditText
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/price"/>

            <EditText
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:hint="@string/description_of_the_object"/>

            <TextView
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/add_choose_categories" />

            <Spinner
                android:id="@+id/add_category"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:entries="@array/search_loading" />



        </LinearLayout>


        <LinearLayout
            android:id="@+id/select_image_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/selectphoto"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:src="@drawable/gallery_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/choose_from_gallery" />

        </LinearLayout>


        <Button
            android:id="@+id/post_item_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/post_my_item"
            android:textColor="@color/white"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>