<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:onClick="showItemDescription"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/list_item_photo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/item_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/default_photo" />

    <RelativeLayout
        android:id="@+id/item_list_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@id/list_item_photo"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/list_item_photo">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/list_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_name"
            android:text="@string/item_price"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_price"
            android:text="Click to view more about item"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_list_info"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/item_list_info" />

    <ToggleButton
        android:id="@+id/list_item_fav"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="Delete"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />
</androidx.constraintlayout.widget.ConstraintLayout>
